@@ -12,6 +12,7 @@
 - fixed unexpected errors when compressing/decompressing data via WebSocket
 - fixed processing TMS data in the FlowStream
 - added a new config key `CONF.$httpcacheoffset` for extending `last-modified` header
+- exended `Total.download()` by adding `size {Number}` property to the response
 
 ========================
 0.0.15
